--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: splash
-author_profile: false
-header:
-  image: /assets/Images/Splash/SplashBanner.jpg
+layout: single
+author_profile: true
+# header:
+#  image: /assets/Images/Splash/SplashBanner.jpg
 ---
