--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ author_profile: true
 # header:
 #  image: /assets/Images/Splash/SplashBanner.jpg
 title: About
-excerpt: Hi there! This is my website. It is still under construction. \n I am a chemical engineer who loves science, coffee and jogging.
+Hi there! This is my website. It is still under construction. \n I am a chemical engineer who loves science, coffee and jogging.
 ---
