--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: single
 author_profile: true
 # header:
 #  image: /assets/Images/Splash/SplashBanner.jpg
-
----
 title: About
-Hi there! This is my website. It is still under construction. I am a chemical engineer who loves science, coffee and jogging.
----
+------------
+Hi there! This is my website. It is still under construction. 
+
+I am a chemical engineer who loves science, coffee and jogging.
 
