--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ author_profile: true
 title: About
 ---
 Hi there! This is my website. It is still under construction. \
-I am a chemical engineer who loves science, coffee and jogging.
+I am a chemical engineer who loves science, coffee and jogging...
 
