--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@ author_profile: true
 #  image: /assets/Images/Splash/SplashBanner.jpg
 title: About
 ---
-Hi there! This is my website. It is still under construction.  <\br>
-
-
+Hi there! This is my website. It is still under construction.\\
 I am a chemical engineer who loves science, coffee and jogging.
 
