--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ author_profile: true
 #  image: /assets/Images/Splash/SplashBanner.jpg
 title: About
 ---
-Hi there! This is my website. It is still under construction.<br>
-I am a chemical engineer who loves science, coffee and jogging.
+permalink: /about/
+# Hi there! This is my website. It is still under construction.<br>
+# I am a chemical engineer who loves science, coffee and jogging.
 
